<resources>

    <string name="title_activity_maps">Map</string>
    <string name="app_name">ViaFerrata</string>
    <string name="filter_text">Filtrer</string>
    <string name="cancelText">Annuler les filtres</string>
    <string name="validate">Valider</string>
    <string name="title_activity_via">ViaActivity</string>
    <string name="action_settings">Settings</string>
    <string name="done">Déjà faite</string>
    <string name="favorite">Favoris</string>
    <string name="back">Retour</string>

    <string-array name="spinner">
        <item>Nom</item>
        <item>Département(n°)</item>
        <item>Département(nom)</item>
        <item>Difficulté</item>
    </string-array>

    <!--    String ViaAvtivity    -->
    <string name="viaNameStatic">Non de la Via Ferrata :</string>
    <string name="viaVilleStatic">Ville :</string>
    <string name="viaDepartementStatic">Departement :</string>
    <string name="viaRegionStatic">Région :</string>
    <string name="viaDescriptionStatic">Description de la Via Ferrata :</string>
    <string name="viaAltDepartStatic">Alt de départ</string>
    <string name="viaAltArriveeStatic">Alt d\'arrivée</string>
    <string name="viaNiveauStatic">Niveau :</string>
    <string name="viaDureeStatic">Durée :</string>
    <string name="viaDenivelStatic">Dénivelé</string>
    <string name="viaLongueurStatic">Longueur</string>
    <string name="viaPasserelleStatic">Passerelles</string>
    <string name="viaPontSingeStatic">Ponts de Singe</string>
    <string name="viaEchelleStatic">Echelles Fillets</string>
    <string name="viaTyrolStatic">Tyroliennes</string>
    <string name="viaAccesStatic">Infos sur l\'accès :</string>
    <string name="viaInfoStatic">Infos complémentaires :</string>
    <string name="viaPrix">Prix :</string>
    <string name="shareVia">Partager via : </string>
    <string name="shareSubject">Télécharge l\'appli ViaFerrata !</string>
    <string name="shareBody">Télécharge vite l\'appli ViaFerrata et trouve ta prochaine sortie #sport et #nature !</string>


    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="resetText">ANNULER LES FILTRES</string>
    <string name="shar">Partager</string>
    <string name="itinerary">Itineraire</string>
    <string name="permission_granted">Merci d\'avoir autorisé la géolocalisation.</string>
    <string name="permission_not_granted">Vous avez refusé la géolocalisation !</string>


    <!--   STYLE MAP    -->
    <string name="style_json">
        [{"stylers": [{"visibility": "on"}]},
        {"elementType": "geometry.stroke","stylers": [{"visibility": "on"}]},
        {"featureType": "administrative.country","elementType": "labels","stylers": [{"visibility": "off"}]},
        {"featureType": "administrative.land_parcel","elementType": "labels","stylers": [{"visibility": "off"}]},
        {"featureType": "administrative.locality","stylers": [{"visibility": "on"}]},
        {"featureType": "administrative.locality","elementType": "labels","stylers": [{"visibility": "simplified"}]},
        {"featureType": "administrative.province","elementType": "geometry.stroke","stylers": [{"color": "#f4a443"},{"visibility": "on"}]},
        {"featureType": "landscape.natural","stylers": [{"visibility": "on"}]},
        {"featureType": "poi","elementType": "labels.text","stylers": [{"visibility": "off"}]},
        {"featureType": "poi.business","stylers": [{"visibility": "off"}]},
        {"featureType": "poi.government","stylers": [{"visibility": "off"}]},
        {"featureType": "poi.medical","stylers": [{"visibility": "off"}]},
        {"featureType": "poi.park","stylers": [{"visibility": "on"}]},
        {"featureType": "poi.park","elementType": "labels.text","stylers": [{"visibility": "off"}]},
        {"featureType": "poi.place_of_worship","stylers": [{"visibility": "on"}]},
        {"featureType": "poi.school","stylers": [{"visibility": "off"}]},
        {"featureType": "poi.sports_complex","elementType": "geometry","stylers": [{"visibility": "on"}]},
        {"featureType": "road","elementType": "labels","stylers": [{"visibility": "off"}]},
        {"featureType": "road.highway","stylers": [{"visibility": "simplified"}]},
        {"featureType": "road.local","elementType": "labels","stylers": [{"visibility": "off"}]},
        {"featureType": "transit","stylers": [{"visibility": "off"}]}]
    </string>
    <string name="distance_filter">Filtrer par distance :</string>

</resources>
