<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <Switch
            android:id="@+id/switchFavorite"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:paddingEnd="30dp"
            android:paddingLeft="20dp"
            android:paddingRight="30dp"
            android:paddingStart="20dp"
            android:text="@string/favorite" />

        <Switch
            android:id="@+id/switchDone"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:paddingEnd="30dp"
            android:paddingLeft="20dp"
            android:paddingRight="30dp"
            android:paddingStart="20dp"
            android:text="@string/done" />

        <ExpandableListView
            android:id="@+id/lvExp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorRight" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/filter_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/filter_text"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:text="@string/resetText" />

            <Button
                android:id="@+id/buttonValider"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:text="@string/validate" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>